// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CodeSnippet copy confirmation is shown after copying and clears after the timeout 1`] = `
<div
  class="code-snippet "
>
  <pre
    class="code-snippet__pre"
  >
    <code
      class="code-snippet__code"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
  <div
    class="code-snippet__overlay code-snippet__overlay--success"
  >
    Copied to clipboard!
  </div>
</div>
`;

exports[`CodeSnippet copy guidance is not shown by default 1`] = `
<div
  class="code-snippet "
>
  <pre
    class="code-snippet__pre"
  >
    <code
      class="code-snippet__code"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
</div>
`;

exports[`CodeSnippet copy guidance is shown on hover 1`] = `
<div
  class="code-snippet code-snippet--interactive"
>
  <pre
    class="code-snippet__pre"
  >
    <code
      class="code-snippet__code"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
  <div
    class="code-snippet__overlay"
  >
    Click to copy
  </div>
</div>
`;
